# smart-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  smartmcp.example.json
.cursor/plans/: smartmcp_build_plan_bbdf589e.plan.md
benchmarks/: README.md  benchmark.py  compare.py  snapshot_tools.py  test_cases.json
smartmcp/: __init__.py  __main__.py  cli.py  config.py  embedding.py  server.py  upstream.py
tests/: test_static_dispatcher.py
