[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartmcp-router"
version = "0.3.0"
description = "Intelligent MCP tool routing — reduce context bloat by serving only relevant tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/spak2005/smart-mcp"
Repository = "https://github.com/spak2005/smart-mcp"
Issues = "https://github.com/spak2005/smart-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["smartmcp"]

[project.scripts]
smartmcp = "smartmcp.cli:main"
